[gd_scene load_steps=11 format=2]

[ext_resource path="res://Cenas/memoria/memoria.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/cena_Minigame/miniGameMemoria.gd" type="Script" id=2]
[ext_resource path="res://Font/MEGAMAN10.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/Quiz/desktop.png" type="Texture" id=4]
[ext_resource path="res://Audio/562773__bionn__sync-blip.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/cardflip.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/error.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/success.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/8-bit-game-over-sound-tune.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[node name="miniGameMemoria" type="Node2D"]
script = ExtResource( 2 )

[node name="Desktop" type="Sprite" parent="."]
position = Vector2( 682.5, 372 )
scale = Vector2( 2.0447, 2.07634 )
texture = ExtResource( 4 )

[node name="memoria" parent="." instance=ExtResource( 1 )]
position = Vector2( 191, 71 )
scale = Vector2( 0.7, 0.7 )
autoStart = false
apagaFundo = true
mostra_cartas = false

[node name="hud" type="Node2D" parent="."]
position = Vector2( 0, 598 )

[node name="acertos" type="Label" parent="hud"]
margin_left = 20.0
margin_top = 14.0
margin_right = 487.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "Acertos: 0"

[node name="vidas" type="Label" parent="hud"]
margin_left = 801.0
margin_top = 14.0
margin_right = 1268.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "Acertos: 0"
align = 2

[node name="blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="flip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="flipped" from="memoria" to="." method="_on_memoria_flipped"]
[connection signal="mactch" from="memoria" to="." method="_on_memoria_mactch"]
[connection signal="miss" from="memoria" to="." method="_on_memoria_miss"]
[connection signal="selected" from="memoria" to="." method="_on_memoria_selected"]
